Fixed a million layout bugs

--- a/containers.css
+++ b/containers.css
@@ -3,7 +3,10 @@
   max-width: 12.5%;
   margin: auto;
   overflow-x: visible;
+}
 
+.min-width-contained{
+  min-width: 50%;
 }
 
 .prophecy-card, .advanced-view-item{
